--- a/app/src/main/res/drawable/star_excellent.xml
+++ b/app/src/main/res/drawable/star_excellent.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="188.89dp"
-    android:viewportWidth="200"
-    android:viewportHeight="188.89">
-
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="24.0"
+    android:viewportWidth="24.0">
     <path
         android:fillColor="#52b952"
-        android:pathData="M 200 72.24 L 123.48 72.24 L 100 0 L 76.51 72.24 L 0 72.24 L 62 116.68 L 38.19 188.89 L 100 144.09 L 161.8 188.89 L 138 116.68 L 200 72.24 Z" />
+        android:pathData="M12,17.27L18.18,21l-1.64,-7.03L22,9.24l-7.19,-0.61L12,2 9.19,8.63 2,9.24l5.46,4.73L5.82,21z" />
 </vector>
