--- a/app/src/main/res/layout/suggestion_user.xml
+++ b/app/src/main/res/layout/suggestion_user.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,10 +18,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp">
 
-            <com.mikhaellopez.circularimageview.CircularImageView
+            <ImageView
                 android:id="@+id/user_avatar"
                 android:layout_width="32dp"
-                android:layout_height="32dp" />
+                android:layout_height="32dp"
+                android:src="@drawable/avatar" />
 
             <TextView
                 android:id="@+id/user_name"
@@ -47,7 +49,7 @@
                 android:layout_toEndOf="@+id/user_avatar"
                 android:layout_toStartOf="@+id/timestamp"
                 android:gravity="center_vertical"
-                android:text="Gamatos poths, Matakia, Kauliaris"
+                android:text="Dummy description"
                 android:textSize="8sp" />
 
             <TextView
@@ -62,6 +64,8 @@
 
             <Button
                 android:id="@+id/btn_follow"
+                android:textSize="8sp"
+                android:text="@string/follow"
                 android:layout_width="60dp"
                 android:layout_height="32dp"
                 android:layout_alignParentEnd="true" />
@@ -108,102 +112,314 @@
                 android:id="@+id/pros_icon"
                 android:layout_width="12dp"
                 android:layout_height="12dp"
-                android:layout_marginTop="1dp"
-                android:layout_marginStart="8dp"
-                android:layout_toEndOf="@+id/star"
                 android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="1dp"
+                android:layout_toEndOf="@+id/star"
                 android:src="@drawable/pros" />
+
             <TextView
                 android:id="@+id/pros_comment"
                 android:layout_width="match_parent"
-                android:layout_marginBottom="8dp"
                 android:layout_height="wrap_content"
-                android:text="Kalhmera ti kanetwjfkgrg grgergrfgdfgdf dfgdf gg dfgdfg dfgdfgdfg dfgdfgdfg"
+                android:layout_marginBottom="8dp"
                 android:layout_marginStart="4dp"
                 android:layout_toEndOf="@+id/pros_icon"
+                android:text="Kalhmera ti kanetwjfkgrg grgergrfgdfgdf dfgdf gg dfgdfg dfgdfgdfg dfgdfgdfg"
                 android:textColor="@color/black"
                 android:textSize="10sp" />
 
             <ImageView
                 android:id="@+id/cons_icon"
                 android:layout_width="12dp"
-                android:layout_marginTop="1dp"
-                android:layout_marginBottom="8dp"
                 android:layout_height="12dp"
-                android:layout_marginStart="8dp"
-                android:layout_toEndOf="@+id/star"
                 android:layout_below="@+id/pros_comment"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="1dp"
+                android:layout_toEndOf="@+id/star"
                 android:src="@drawable/cons" />
+
             <TextView
                 android:id="@+id/cons_comment"
                 android:layout_width="match_parent"
-                android:layout_marginBottom="8dp"
-                android:text="Kalhmera ti kanetwjfkgrg grgergrfgdfgdf dfgdf gg dfgdfg dfgdfgdfg dfgdfgdfg"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
                 android:layout_below="@+id/pros_comment"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="4dp"
                 android:layout_toEndOf="@+id/cons_icon"
+                android:text="Kalhmera ti kanetwjfkgrg grgergrfgdfgdf dfgdf gg dfgdfg dfgdfgdfg dfgdfgdfg"
                 android:textColor="@color/black"
                 android:textSize="10sp" />
         </RelativeLayout>
 
         <ImageView
-            android:layout_below="@+id/grade_layout"
             android:id="@+id/product_image"
             android:layout_width="match_parent"
-            android:padding="16dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/grade_layout"
             android:minHeight="180dp"
-            android:layout_height="wrap_content" />
+            android:padding="16dp" />
+
         <RelativeLayout
             android:id="@+id/frame"
-            android:background="#88000000"
-            android:layout_alignBottom="@+id/product_image"
             android:layout_width="match_parent"
-            android:padding="8dp"
-            android:layout_height="80dp">
+            android:layout_height="80dp"
+            android:layout_alignBottom="@+id/product_image"
+            android:background="#88000000"
+            android:paddingStart="8dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp">
+
             <ImageView
                 android:id="@+id/small_image"
                 android:layout_width="64dp"
-                android:layout_centerVertical="true"
-                android:layout_height="64dp" />
-            
+                android:layout_height="64dp"
+                android:layout_centerVertical="true" />
+
             <ImageView
-                android:layout_marginStart="8dp"
                 android:id="@+id/star1"
-                android:src="@drawable/star_white"
-                android:layout_toEndOf="@+id/small_image"
+                android:layout_width="16dp"
+                android:layout_marginTop="2dp"
+                android:layout_height="16dp"
                 android:layout_alignParentBottom="true"
-                android:layout_width="24dp"
-                android:layout_height="24dp" />
+                android:layout_marginStart="8dp"
+                android:layout_toEndOf="@+id/small_image"
+                android:src="@drawable/star_white" />
+
             <ImageView
                 android:id="@+id/star2"
-                android:src="@drawable/star_white"
-                android:layout_toEndOf="@+id/star1"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 android:layout_alignParentBottom="true"
-                android:layout_width="24dp"
-                android:layout_height="24dp" />
+                android:layout_toEndOf="@+id/star1"
+                android:src="@drawable/star_white" />
+
             <ImageView
                 android:id="@+id/star3"
-                android:src="@drawable/star_white"
-                android:layout_toEndOf="@+id/star2"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 android:layout_alignParentBottom="true"
-                android:layout_width="24dp"
-                android:layout_height="24dp" />
+                android:layout_toEndOf="@+id/star2"
+                android:src="@drawable/star_white" />
+
             <ImageView
                 android:id="@+id/star4"
-                android:src="@drawable/star_white"
-                android:layout_toEndOf="@+id/star3"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 android:layout_alignParentBottom="true"
-                android:layout_width="24dp"
-                android:layout_height="24dp" />
+                android:layout_toEndOf="@+id/star3"
+                android:src="@drawable/star_white" />
+
             <ImageView
                 android:id="@+id/star5"
-                android:src="@drawable/star_empty"
-                android:layout_toEndOf="@+id/star4"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 android:layout_alignParentBottom="true"
-                android:layout_width="24dp"
-                android:layout_height="24dp" />
+                android:layout_toEndOf="@+id/star4"
+                android:src="@drawable/star_empty" />
 
+            <ImageView
+                android:id="@+id/verified_icon"
+                android:src="@drawable/verified"
+                android:layout_width="15dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="2dp"
+                android:layout_toEndOf="@+id/small_image"
+                android:layout_height="15dp" />
+            <TextView
+                android:id="@+id/verified_text"
+                android:text="@string/verified"
+                android:layout_width="wrap_content"
+                android:textColor="#009f3c"
+                android:textSize="8sp"
+                android:textStyle="bold"
+                android:layout_marginStart="4dp"
+                android:layout_alignTop="@+id/verified_icon"
+                android:gravity="center_vertical"
+                android:layout_alignBottom="@+id/verified_icon"
+                android:layout_toEndOf="@+id/verified_icon"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/product_name"
+                android:layout_below="@+id/verified_icon"
+                android:layout_toEndOf="@+id/small_image"
+                android:layout_marginStart="8dp"
+                android:text="Amita"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:layout_toStartOf="@+id/arrow_img"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/product_category"
+                android:layout_above="@+id/star1"
+                android:layout_toEndOf="@+id/small_image"
+                android:layout_marginStart="8dp"
+                android:text="Dummy category"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/total_grade"
+                android:layout_toEndOf="@+id/star5"
+                android:layout_alignTop="@+id/star5"
+                android:layout_alignBottom="@+id/star5"
+                android:gravity="center_vertical"
+                android:layout_marginStart="8dp"
+                android:text="4.1"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/total_comments"
+                android:layout_toEndOf="@+id/total_grade"
+                android:layout_alignTop="@+id/star5"
+                android:layout_alignBottom="@+id/star5"
+                android:gravity="center_vertical"
+                android:layout_marginStart="8dp"
+                android:text="(48)"
+                android:textSize="10sp"
+                android:textColor="@color/colorPrimary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+            <ImageView
+                android:id="@+id/arrow_img"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:rotation="180"
+                android:src="@drawable/back"
+                android:tint="#ffffff" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_margin="8dp"
+            android:layout_below="@+id/frame"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/useful_title"
+                android:text="@string/useful_title"
+                android:textSize="8sp"
+                android:layout_marginBottom="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:src="@drawable/useful"
+                android:id="@+id/like_icon"
+                android:layout_below="@+id/useful_title"
+                android:layout_marginTop="4dp"
+                android:layout_width="16dp"
+                android:layout_height="16dp" />
+            <TextView
+                android:id="@+id/total_positive"
+                android:textStyle="bold"
+                android:layout_toEndOf="@+id/like_icon"
+                android:layout_alignTop="@+id/like_icon"
+                android:layout_alignBottom="@+id/like_icon"
+                android:layout_marginStart="4dp"
+                android:text="38"
+                android:gravity="center_vertical"
+                android:textSize="10sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/user1"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/avatar"
+                android:layout_toEndOf="@+id/total_positive"
+                android:layout_alignTop="@+id/like_icon"
+                android:layout_alignBottom="@+id/like_icon"
+                android:layout_marginStart="4dp" />
+            <ImageView
+                android:id="@+id/user2"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/avatar"
+                android:layout_toEndOf="@+id/user1"
+                android:layout_alignTop="@+id/like_icon"
+                android:layout_alignBottom="@+id/like_icon"
+                android:layout_marginStart="4dp" />
+           <ImageView
+                android:id="@+id/user3"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/avatar"
+                android:layout_toEndOf="@+id/user2"
+                android:layout_alignTop="@+id/like_icon"
+                android:layout_alignBottom="@+id/like_icon"
+                android:layout_marginStart="4dp" />
+            <ImageView
+                android:id="@+id/user4"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/avatar"
+                android:layout_toEndOf="@+id/user3"
+                android:layout_alignTop="@+id/like_icon"
+                android:layout_alignBottom="@+id/like_icon"
+                android:layout_marginStart="4dp" />
+            <ImageView
+                android:id="@+id/user5"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/avatar"
+                android:layout_toEndOf="@+id/user4"
+                android:layout_alignTop="@+id/like_icon"
+                android:layout_alignBottom="@+id/like_icon"
+                android:layout_marginStart="4dp" />
+            <ImageView
+                android:id="@+id/user6"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/avatar"
+                android:layout_toEndOf="@+id/user5"
+                android:layout_alignTop="@+id/like_icon"
+                android:layout_alignBottom="@+id/like_icon"
+                android:layout_marginStart="4dp" />
+            <ImageView
+                android:src="@drawable/useful"
+                android:id="@+id/dislike_icon"
+                android:layout_below="@+id/useful_title"
+                android:layout_marginTop="4dp"
+                android:layout_toEndOf="@+id/user6"
+                android:layout_marginStart="8dp"
+                android:layout_width="16dp"
+                android:rotation="180"
+                android:layout_height="16dp" />
+            <TextView
+                android:id="@+id/total_negative"
+                android:textStyle="bold"
+                android:layout_toEndOf="@+id/dislike_icon"
+                android:layout_alignTop="@+id/like_icon"
+                android:layout_alignBottom="@+id/like_icon"
+                android:layout_marginStart="4dp"
+                android:text="10"
+                android:gravity="center_vertical"
+                android:textSize="10sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:src="@drawable/chat"
+                android:id="@+id/comment"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/useful_title"
+                android:layout_marginTop="4dp"
+                android:layout_width="16dp"
+                android:layout_height="16dp" />
         </RelativeLayout>
 
     </RelativeLayout>
